more style changes to fix layout issues on mobile.

--- a/client/src/components/Footer.module.css
+++ b/client/src/components/Footer.module.css
@@ -5,10 +5,11 @@
   display: flex;
   flex-direction: column;
   align-items: flex-end;
-  padding: 1.4em 2rem 5.6rem 1.4rem;
+  padding: 1.4em 2rem 5rem 1.4rem;
   margin-top: auto;
   gap: 1rem;
-  box-shadow: 3px 0 18px #000;
+  box-shadow: 3px 0 8px #000;
+  border-radius: 8px 8px 0 0;
 }
 
 .footer .logoutLink button {
