--- a/client/src/components/Navbar.module.css
+++ b/client/src/components/Navbar.module.css
@@ -3,6 +3,7 @@ h1.navbarHeader {
 }
 .navbarHeader a {
   color: #366897;
+  text-shadow: -2px 2px 4px #222;
 }
 
 .navbarHeader a span {
@@ -34,6 +35,7 @@ header.header {
   background-color: #464545;
   color: #c5c5c9;
   box-shadow: -4px 0 23px #000;
+  border-radius: 0 0 10px 10px;
 }
 
 @media screen and (max-width: 700px) {
