--- a/client/src/index.css
+++ b/client/src/index.css
@@ -56,7 +56,6 @@ html {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
   flex-grow: 1;
   width: 100vw;
 }
