--- a/client/src/routes/ActiveRepairs.module.css
+++ b/client/src/routes/ActiveRepairs.module.css
@@ -53,6 +53,7 @@
   display: flex;
   flex-direction: column;
   gap: 2.8rem;
+  margin-top: 25%;
 }
 
 @media screen and (max-width: 475px) {
